<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="app_name">Test Application</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Words go here</string>
    <string name="button_send">Send</string>

    <String name="button_boop">Boop</String>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fullscreen_clock">Fullscreen ClockActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="testClock">Clock</string>
    <string name="title_activity_color_tester">Color Tester</string>
    <string name="colorTester">Color</string>
    <string name="colorTesterTitle">Test Color</string>
    <string name="title_activity_seekbar_test">Seekbar Tester</string>
    <string name="seekbarTest">SeekBar Test</string>

    <string name="action_favorite">❤</string>
    <string name="colorvalue">VALUE</string>

    <string name="title_activity_favorite_colors">Favorite Colors</string>
    <string name="title_activity_addToFavorites">Add to favorites</string>
    <string name="favcolor_menuitem_use">Use</string>
    <string name="favcolor_menuitem_delete">Delete</string>
    <string name="favcolor_menuitem_info">More info</string>
    <string name="title_activity_color_info">ColorInfo</string>

    <string name="colorinfotitle">Color info for:  </string>
    <string name="red">Red: </string>
    <string name="green">Green: </string>
    <string name="blue">Blue: </string>
    <string name="hue">Hue: </string>
    <string name="saturation">Sat: </string>
    <string name="value">Value: </string>

</resources>
