<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorInfo"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:textSize="33sp"
            android:text="@string/colorinfotitle"/>
        <TextView
            android:id="@+id/colorInfo_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:textSize="33sp"
            android:layout_gravity="right"
            android:gravity="left"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textSize="20sp"
            android:text="@string/red"/>

        <TextView
            android:id="@+id/colorInfo_color_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:textSize="20sp"
            />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textSize="20sp"
            android:text="@string/green"/>

        <TextView
            android:id="@+id/colorInfo_color_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:textSize="20sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textSize="20sp"
            android:text="@string/blue"/>

        <TextView
            android:id="@+id/colorInfo_color_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorInfo_breakerBar_before"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/colorInfo_breakerBar_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/colorInfo_breakerBar_after"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal">
    </LinearLayout>

<!-- END OF RGB -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textSize="20sp"
            android:text="@string/hue"/>

        <TextView
            android:id="@+id/colorInfo_color_hue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:textSize="20sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textSize="20sp"
            android:text="@string/saturation"/>

        <TextView
            android:id="@+id/colorInfo_color_saturation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:textSize="20sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textSize="20sp"
            android:text="@string/value"/>

        <TextView
            android:id="@+id/colorInfo_color_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:textSize="20sp"
            />

    </LinearLayout>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/colorInfoFrame"
    android:orientation="vertical">

    </LinearLayout>

</LinearLayout>

